View encapsulation & css fixes (#61)
* Added the option to open the date range picker in a modal

* Amendments for pull request #1

- Converted relevant code to a ternary
- Formatting edits

* Amendments for pull request no.2

- Abstracted away some components

* Amendments for pull request no.3

* Fixed 1px border in modal view

* Introduced hard fixes for layout problems

* Corrected css

--- a/src/modules/ngx-daterange/src/components/calendar/calendar.component.scss
+++ b/src/modules/ngx-daterange/src/components/calendar/calendar.component.scss
@@ -13,6 +13,13 @@
     font-size: 16px;
     margin: 0.5rem -15px 0 -15px;
 
+    //apply width values so they don't get overriden from the outside
+    .btn, .btn-link {
+      min-width: auto;
+      width: auto;
+      background-color: transparent;
+    }
+
     &.material {
       .btn {
         &.btn-previous-year {
